2002-02-09  Richard Henderson  <rth@redhat.com>

	* lib/target.exp (prune_warnings): Strip "In function" etc early.
	Adjust "dangerous" regexp for glibc's tmpnam warning.

2002-02-09  Alexandre Oliva  <aoliva@redhat.com>

	* lib/libgloss.exp [get_multilibs]: Compute multitop earlier, and
	use --print-multi-directory if available.

2002-02-05  Nick Clifton  <nickc@cambridge.redhat.com>

	* lib/libgloss.exp (g++_include_flags): Add top level
	libstdc++-v3 build include path, remove duplicate src path.
	(libstdc++_include_flags): Add top level libstdc++-v3 build
	include path.

2002-01-21  Ben Elliston  <bje@redhat.com>

	* baseboards/sh-sid.exp: New file.

2002-01-17  H.J. Lu  (hjl@gnu.org)

	* config.guess: Import from master sources, rev 1.225.

2002-01-17  Nick Clifton  <nickc@cambridge.redhat.com>

	* lib/libgloss.exp (g++_include_flags): Add libstdc++-v3
	include paths.
	(libstdc++_include_flags): Add libstdc++-v3 include paths.

2001-11-26  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* baseboards/i386-sid.exp: New file.

2001-11-19  Elena Zannoni  <ezannoni@redhat.com>

	* lib/libgloss.exp (g++_link_flags): Libstdc++ is now in
	libstdc++-v3/src/.libs.

2001-11-12  Andrew Cagney  <ac131313@redhat.com>

	* lib/remote.exp (local_exec, standard_close): Use SHELL
	background instead of tcl background to background the kill
	processes.  Work around problem found by Nick Duffek in older
	CYGWINs.

2001-10-10  Frank Ch. Eigler  <fche@redhat.com>

	* config/sid.exp (set_host_info): New proc.  Call it to set
	gdb,nointerrupt flag to work around framework problems.

2001-09-14  Eric Christopher  <echristo@redhat.com>

	* baseboards/mips-sim-idt64.exp: New file.

2001-09-10  Jim Blandy  <jimb@redhat.com>

	* baseboards/rom68k-idp.exp: Use -Tidpgdb.ld as the linker script,
	so we get the version of the `outbyte' function that does console
	output in a way that GDB's rom68k target recognizes.  Note that
	the board can now do output.
