@@ -1,3 +1,9 @@
+2002-02-20  Richard Henderson  <rth@redhat.com>
+
+	* lib/target.exp (prune_warnings): Revert early "In function" strip,
+	as this breaks g++.dg tests.  Match dangerous regexp without the
+	"In function" header.
+
 2002-02-09  Richard Henderson  <rth@redhat.com>
 
 	* lib/target.exp (prune_warnings): Strip "In function" etc early.
